<resources>
    <string name="app_name">inclass11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty"></string>
    <string name="coursenum">Course Number</string>
    <string name="credithours">Credit Hours</string>
    <string name="courseName">Course Name</string>
    <string name="coursegrade">Course Grade</string>
    <string name="courses">Courses</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="addcourse">Add Course</string>
    <string name="Error">Error!</string>
    <string name="entercoursename">Enter Valid Course Name!!</string>
    <string name="entercoursenum">Enter Valid Course Number!!</string>
</resources>